--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^8.16.0",
     "@react-three/fiber": "^7.0.26",
     "@react-three/xr": "^3.4.0",
+    "lamina": "^1.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
